--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,38 @@
-# Compiled class file
-*.class
-*.DS_Store
+HELP.md
+.gradle
+build/
+/target
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
 
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
+### IntelliJ IDEA ###
+.idea
+*.iws
 *.iml
-*.xml
-# Log file
-*.idea
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
 
-*.log
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
 
-# BlueJ files
-*.ctxt
+### VS Code ###
+.vscode/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+### Mac ###
+.DS_Store
